# advent-of-code

./: .dir-locals.el  .envrc  .gitignore  .pre-commit-config.yaml  README.md  get_input.py  shell.nix
.github/workflows/: ci.yaml  pre-commit.yaml
2020/01/: solve.js  solve.py
2020/02/: solve.py
2020/03/: solve.py
2020/04/: solve.py
2020/05/: solve.py
2020/06/: solve.py
2020/07/: solve.py
2020/08/: solve.py
2020/09/: solve.py
2020/10/: solve.py
2020/11/: solve.py
2020/12/: solve.py
2020/13/: solve.py
2020/14/: solve.py
2020/15/: input  solve.py
2020/16/: solve.py
2020/17/: solve.py
2020/18/: solve.py
2020/19/: solve.py
2020/20/: solve.py
2020/21/: solve.py
2020/22/: solve.py
2020/23/: solve.py
2020/24/: solve.py
2020/25/: solve.py
2021/01/: solve.py  solve.rs
2021/02/: solve.py
2021/03/: solve.py
2021/04/: solve.py
2021/05/: solve.py
2021/06/: solve.py
2021/07/: solve.py
2021/08/: solve.py
2021/09/: solve.py
2021/10/: solve.py
2021/11/: solve.py
2021/12/: solve.py
2021/13/: solve.py
2021/14/: solve.py
2021/15/: solve.py
2021/16/: solve.py
2021/17/: solve.py
2021/18/: solve.py
2021/19/: solve.py
2021/20/: solve.py
2021/21/: solve.py
2021/22/: solve.py
2021/23/: solve.py
2021/24/: solve.py
2021/25/: solve.py
2022/01/: solve.py
2022/02/: solve.py
2022/03/: solve.py
2022/04/: solve.py
2022/05/: solve.py
2022/06/: solve.py
2022/07/: solve.py
2022/08/: solve.py
2022/09/: solve.py
2022/10/: solve.py
aoc/: pyproject.toml
aoc/aoc/: __init__.py
(+79 files in other folders)
